--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -1,8 +1,4 @@
-.App {
-  text-align: center;
-}
-
-/* For mobile phones: */
+* For mobile phones: */
 .imposter {
   color: #05386b;
   font-family: 'Arbutus Slab', serif;
@@ -18,6 +14,7 @@
 }
 .imposter p {
   text-align: left;
+  margin: 0 auto;
   
 }
 .imposter h1{
@@ -27,11 +24,13 @@
   text-align: left;
   margin: 0 auto;
 }
-.imposter h3, h4, h5, h6 {
+.imposter h3 {
   text-align: left;
   margin: 0 auto;
   font-style: italic;
 }
+
+
 
 .App-header {
   background-color: #5cdb95;
@@ -42,35 +41,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.one {
-  background-color: #8ee4af;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-.two {
-  background-color: #edf5e1;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-.three {
-  background-color: #379683;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
