--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
   font-family: 'Arbutus Slab', serif;
   width: 90%;
 }
+a {
+  color: goldenrod;
+}
 input[type=text] {
   width: 90%;
   padding: 5px 10px;
@@ -91,7 +94,7 @@ input[type=text] {
   flex-direction: column;
 }
 .three {
-  background-color: #379683;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
