--- a/src/App.css
+++ b/src/App.css
@@ -45,12 +45,16 @@ input[type=text] {
   text-align: left;
   margin: 0 auto;
 }
-.imposter h3, h4, h5, h6 {
+.imposter h3, h4, h5 {
   text-align: left;
   margin: 0 auto;
   font-style: italic;
 }
-
+.imposter h6 {
+  margin: 0 auto;
+  display: inline-block;
+  text-align: left;
+}
 
 .outer {
   background-color:#e0eecc;
