--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,16 @@
 a {
   color: goldenrod;
 }
+
+.nav {
+  position: fixed;
+  top: 0;
+  padding: 30px 16px;
+  background: rgb(49, 134, 130);
+  color: #f1f1f1;
+  width: 100%
+}
+
 input[type=text] {
   width: 90%;
   padding: 5px 10px;
