--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,8 @@ a {
 .nav {
   position: fixed;
   top: 0;
-  padding: 30px 16px;
-  background: rgb(49, 134, 130);
+  padding: 20% 0 50% 0;
+  background: rgba(212, 109, 61, 0.726);
   color: #f1f1f1;
   width: 100%
 }
